examples/proxy/envoy/docker/envoy.yaml
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001

static_resources:
  listeners:
  - name: main
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
      - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              route_config:
                name: local_route
                virtual_hosts:
                  - name: local_service
                    domains:
                      - "*"
                    routes:
                      - match:
                          prefix: "/"
                        route:
                          cluster: web_service
              http_filters:
                - name: envoy.filters.http.wasm
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                    config:
                      configuration:
                        "@type": type.googleapis.com/google.protobuf.StringValue
                        value: |
                          {"param":"value"}
                      name: prime_auth
                      root_id: prime_auth
                      vm_config:
                        vm_id: vm.sentinel.prime_auth
                        runtime: envoy.wasm.runtime.v8
                        code:
                          local:
                            filename: /etc/myenvoyfilter.wasm
                        allow_precompiled: true
                - name: envoy.filters.http.router

  - name: static_reply
    address:
      socket_address:
        address: 127.0.0.1
        port_value: 8002
    filter_chains:
      - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              route_config:
                name: local_route
                virtual_hosts:
                  - name: local_service
                    domains:
                      - "*"
                    routes:
                      - match:
                          prefix: "/"
                        direct_response:
                          status: 200
                          body:
                            inline_string: "Hi from static service!\n"
              http_filters:
                - name: envoy.filters.http.router

  clusters:
    - name: web_service
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: round_robin
      load_assignment:
        cluster_name: web_service
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: web_service
                  port_value: 5678
          - endpoint:
              address:
                socket_address:
                  address: 127.0.0.1
                  port_value: 8002
